@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor UI_COLOR_T4
skinparam classBackgroundColor UI_COLOR
skinparam classAttributeIconSize 0
skinparam ClassAttributeFontColor #MODEL_COLOR
skinparam ClassAttributeIconSize 0

show attributes
show fields
package UI <<Rectangle>> {

  class JobListPanel {
    - jobListView : ListView<Job>
  }

  class JobCard {
    - id : Label
    - description : Label
    - status : Label
  }

  JobListPanel o-- JobCard
  JobCard ..> Model : reads Job via\nObservableList<Job>

}
@enduml
